# reaction-diffusion-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  sim.rs  util.rs
