[package]
name = "reaction-diffusion-rust"
version = "0.1.0"
authors = ["bigbass1997 <bigbass1997.website@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.2"
oorandom = "11.1.3"
gif = "0.11.1"
chrono = "0.4.19"
f128 = "0.2.9"